# backend

./: Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.githooks/: pre-push
src/: main.py  migrate_db.py  seed_db.py  temp_seed.py
src/alembic/: env.py
src/auth/: utils.py
src/constants/: auth.py  common.py
src/cruds/: device.py  notification.py  register.py  settings.py  user.py
src/db/: db.py
src/errors/: errors.py
src/models/: alarm.py  button.py  device.py  humidity.py  models.py  motion.py  notification.py  temperature.py  user.py
src/routers/: alarm.py  auth.py  device.py  notification.py  settings.py  user.py  weather.py
src/schemas/: auth.py  device.py  notification.py  settings.py  user.py  weather.py
src/seed/: generate_seed_data.py
src/sockets/: hardware_namespace.py
src/utils/: common.py  socket.py
tests/routes/: test_device.py
tests/utils/: test_common.py
