[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["team-ondo <teamondo1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
psycopg2 = "^2.9.3"
python-dotenv = "^0.21.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
